dedup lambdas